community page + misc fixes

--- a/community.html
+++ b/community.html
@@ -39,12 +39,12 @@
                 <a href="#">features</a>
                 <div class="uk-navbar-dropdown uk-width-auto uk-text-center uk-padding-small" uk-drop="boundary: !nav; boundary-align: true; pos: bottom-justify;">
                   <ul class="uk-nav uk-navbar-dropdown-nav">
-                    <li><a href="#workflow" uk-scroll="duration: 500;offset: 0">workflow</a></li>
-                    <li><a href="#renderer" uk-scroll="duration: 500;offset: 0">renderer</a></li>
-                    <li><a href="#nodes" uk-scroll="duration: 500;offset: 0">nodes</a></li>
-                    <li><a href="#engine" uk-scroll="duration: 500;offset: 0">engine</a></li>
-                    <li><a href="#platforms" uk-scroll="duration: 500;offset: 0">platforms</a></li>
-                    <li><a href="#animations" uk-scroll="duration: 500;offset: 0">Animations</a></li>
+                    <li><a href="index.html#workflow">workflow</a></li>
+                    <li><a href="index.html#renderer">renderer</a></li>
+                    <li><a href="index.html#nodes">nodes</a></li>
+                    <li><a href="index.html#engine">engine</a></li>
+                    <li><a href="index.html#platforms">platforms</a></li>
+                    <li><a href="index.html#animations">Animations</a></li>
                   </ul>
                 </div>
               </li>
@@ -69,9 +69,10 @@
     </div>
     <div id="offcanvas-slide" uk-offcanvas="bg-close: true">
       <div class="uk-offcanvas-bar">
+        <button class="uk-offcanvas-close" type="button" uk-close></button>
         <ul class="uk-nav uk-nav-default">
           <li>
-            <a href="index.html" uk-scroll="duration: 500" class="uk-offcanvas-close uk-position-left uk-position-relative">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li class="uk-nav-divider"></li>
           <li><a href="#">news</a></li>
@@ -80,28 +81,34 @@
           <li><a href="#">download</a></li>
           <li class="uk-nav-divider"></li>
           <li class="uk-nav-header">Features</li>
-          <li><a href="#workflow" uk-scroll="duration: 500;offset: 0">workflow</a></li>
-          <li><a href="#renderer" uk-scroll="duration: 500;offset: 0">renderer</a></li>
-          <li><a href="#nodes" uk-scroll="duration: 500;offset: 0">nodes</a></li>
-          <li><a href="#engine" uk-scroll="duration: 500;offset: 0">engine</a></li>
-          <li><a href="#platforms" uk-scroll="duration: 500;offset: 0">platforms</a></li>
-          <li><a href="#animations" uk-scroll="duration: 500;offset: 0">Animations</a></li>
+          <li><a href="index.html#workflow">workflow</a></li>
+          <li><a href="index.html#renderer">renderer</a></li>
+          <li><a href="index.html#nodes">nodes</a></li>
+          <li><a href="index.html#engine">engine</a></li>
+          <li><a href="index.html#platforms">platforms</a></li>
+          <li><a href="index.html#animations">Animations</a></li>
           <li class="uk-nav-divider"></li>
-          <li><a href="https://www.patreon.com/bePatron?u=3705855"><img src="img/Patron.png" alt="Patreon Pledge Badge"></a>
-          </li>
+          <li><a href="https://www.patreon.com/bePatron?u=3705855"><img src="img/Patron.png" alt="Patreon Pledge Badge"></a></li>
         </ul>
+
       </div>
     </div>
   </div>
   <!-- Main Content -->
   <div class="uk-section uk-section-secondary uk-section-medium">
     <div class="uk-container uk-container-large">
-      <div class="uk-child-width-expand@l uk-text-center uk-text-left@l uk-grid-medium" uk-grid>
+      <div class="uk-child-width-expand@l uk-text-center uk-grid-medium" uk-grid>
         <div>
-          section 1
+          <h2 class="uk-heading-divider ro-text-header"><a href="http://forums.armory3d.org/">Forums</a></h2>
+          Community forums filled with helpful faces
         </div>
         <div>
-          section 2
+          <h2 class="uk-heading-divider ro-text-header"><a href="https://github.com/armory3d/armory/issues">Github</a></h2>
+          Report bugs and submit feature requests
+        </div>
+        <div>
+          <h2 class="uk-heading-divider ro-text-header"><a href="mailto:lubos@armory3d.org">E-Mail</a></h2>
+          get in touch directly
         </div>
       </div>
     </div>
