--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 </div>
               </li>
               <li><a href="#">news</a></li>
-              <li><a href="#">manual</a></li>
+              <li><a href="http://armory3d.org/manual">manual</a></li>
               <li><a href="community.html">community</a></li>
-              <li><a href="#">download</a></li>
+              <li><a href="download.html">download</a></li>
             </ul>
           </div>
           <div class="uk-navbar-right">
@@ -82,9 +82,9 @@
           </li>
           <li class="uk-nav-divider"></li>
           <li><a href="#">news</a></li>
-          <li><a href="#">manual</a></li>
+          <li><a href="http://armory3d.org/manual">manual</a></li>
           <li><a href="community.html">community</a></li>
-          <li><a href="#">download</a></li>
+          <li><a href="download.html">download</a></li>
           <li class="uk-nav-divider"></li>
           <li class="uk-nav-header">Features</li>
           <li><a href="#workflow" uk-scroll="duration: 500;offset: 0">workflow</a></li>
@@ -105,7 +105,7 @@
     <div class="uk-container uk-container-large">
       <div class="uk-child-width-expand@l uk-text-center uk-text-left@l uk-grid-medium" uk-grid>
         <div>
-          <h2 class="uk-heading-divider ro-text-header">In development!</h2>
+          <h1 class="uk-heading-divider ro-text-header">In development!</h1>
           <p>Before proceeding, please note that all materials currently available are still works in progress.</p>
           <p>The Armory SDK is released as an
             <span class="uk-text-bold" style="font-style: italic;">early preview</span>. Any kind of support & feedback is greatly welcome!</p>
