--- a/news.html
+++ b/news.html
@@ -90,105 +90,18 @@
           <li class="uk-nav-divider"></li>
           <li><a href="https://www.patreon.com/bePatron?u=3705855"><img src="img/Patron.png" alt="Patreon Pledge Badge"></a></li>
         </ul>
+
       </div>
     </div>
   </div>
   <!-- Main Content -->
   <div class="uk-section uk-section-secondary uk-section-medium">
     <div class="uk-container uk-container-large">
-      <div class="uk-child-width-expand@l uk-text-center uk-text-left@l uk-grid-medium" uk-grid>
+      <div class="uk-child-width-1-1 uk-text-center uk-grid-medium" uk-grid>
         <div>
-          <h1 class="uk-heading-divider ro-text-header">Get Armored</h1>
-          <p>
-            Before proceeding, please read the <a href="http://armory3d.org/manual">manual</a> first to know what parts need more work. The preview version has many rough edges and the experience may be frustrating. Armory is running a <a href="https://www.patreon.com/armory">Patreon campaign</a>            to fund it as a fully free and open-source project. Patrons get access to the Armory Lab - a library of in-development engine content. Thank you for support!
-          </p>
-        </div>
-        <div>
-          <iframe frameborder="0" src="https://itch.io/embed/92423?linkback=true&amp;dark=true" width="100%" height="100%"></iframe><br> Try Armory now - see <a href="#browser_demo" uk-scroll="duration: 500;offset: 0">browser demo</a>. Full source code
-          is available at <a href="https://github.com/armory3d">GitHub</a>.
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="donate" class="uk-section uk-section-secondary uk-section-medium">
-    <div class="uk-container uk-container-large">
-      <div class="uk-child-width-expand@l uk-text-center uk-text-left@l uk-grid-medium" uk-grid>
-        <div class="uk-flex-last uk-flex-first@l">
-          <img src="img/Workflow.jpg" alt="Realtime Workflow all done in blender">
-        </div>
-        <div class="uk-flex-first uk-flex-last@l">
-          <h2 class="uk-heading-divider ro-text-header">Donate</h2>
-          <p>
-            If you would like to support Armory development further, donation of any size is greatly appreciated. All money raised are used solely on development of Armory. All donations are processed by PayPal. Subscription can be cancelled at any time through your
-            PayPal account.
-          </p>
-          <div class="uk-child-width-1-1 uk-child-width-1-2@l uk-text-center uk-grid-collapse" uk-grid>
-            <div>
-              <form align="center" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="4PLPYSRW3QXLW">
-                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-              </form>
-            </div>
-            <div>
-              <form align="center" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-                <input type="hidden" name="cmd" value="_s-xclick">
-                <input type="hidden" name="hosted_button_id" value="6MKQ2LPPYD8M6">
-                <table align="center">
-                  <tr>
-                    <td>
-                      <input type="hidden" name="on0" value="">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>
-                      <select name="os0">
-                        <option value="Tier 1">Tier 1 : €5,00 EUR - monthly</option>
-                        <option value="Tier 2">Tier 2 : €10,00 EUR - monthly</option>
-                        <option value="Tier 3">Tier 3 : €25,00 EUR - monthly</option>
-                        <option value="Tier 4">Tier 4 : €50,00 EUR - monthly</option>
-                        <option value="Tier 5">Tier 5 : €100,00 EUR - monthly</option>
-                        <option value="Tier 6">Tier 6 : €180,00 EUR - monthly</option>
-                      </select>
-                    </td>
-                  </tr>
-                </table>
-                <input type="hidden" name="currency_code" value="EUR">
-                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_subscribeCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="supporters" class="uk-section uk-section-secondary uk-section-medium">
-    <div class="uk-container uk-container-large">
-      <div class="uk-child-width-expand@l uk-text-center uk-grid-medium" uk-grid>
-        <div class="uk-width-1-1">
-          <h2 class="uk-heading-divider ro-text-header">Supporters</h2>
-        </div>
-        <div>
-          <img src="img/supporters/ppp_logo.jpg" alt="Pivot Point Press" width="200px">
-        </div>
-        <div>
-          <a href=""><img src="img/supporters/viddyoze_logo.png" alt="Viddyozo Link Logo" width="350px"></a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="browser_demo" class="uk-section uk-section-secondary uk-section-medium">
-    <div class="uk-container uk-container-large">
-      <div class="uk-child-width-expand@l uk-text-center uk-text-left@l uk-grid-medium" uk-grid>
-        <div class="uk-flex-last uk-flex-first@l"><img src="img/Demo.jpg" alt="Browser Based Demo"></div>
-        <div class="uk-flex-first uk-flex-last@l">
-          <h2 class="uk-heading-divider ro-text-header">Browser Demo</h2>
-          <p>
-            Run <a href="http://armory3d.org/demo/animation">Animation demo</a> created in Armory straight in your browser. Note that WebGL has some limitations and you can generally expect up to 20% performance increase when deploying native build. To
-            get the best results, Chrome is recommended. (Run <a href="http://armory3d.org/demo/animation_mobile">mobile</a> version.)
-          </p>
+          <h1 class="uk-heading-divider ro-text-header"><a href="http://forums.armory3d.org/">Newsletter</a></h1>
+          <p><a href="https://tinyletter.com/Armory">Sign up</a> for Armory news.</p>
+          <a class="twitter-timeline" data-width="800" data-dnt="true" data-theme="dark" href="https://twitter.com/armory3d?ref_src=twsrc%5Etfw">Tweets by armory3d</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
       </div>
     </div>
