--- a/community.html
+++ b/community.html
@@ -48,7 +48,7 @@
                   </ul>
                 </div>
               </li>
-              <li><a href="#">news</a></li>
+              <li><a href="news.html">news</a></li>
               <li><a href="http://armory3d.org/manual">manual</a></li>
               <li><a href="community.html">community</a></li>
               <li><a href="download.html">download</a></li>
@@ -75,7 +75,7 @@
             <a href="index.html">Home</a>
           </li>
           <li class="uk-nav-divider"></li>
-          <li><a href="#">news</a></li>
+          <li><a href="news.html">news</a></li>
           <li><a href="http://armory3d.org/manual">manual</a></li>
           <li><a href="community.html">community</a></li>
           <li><a href="download.html">download</a></li>
