--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   </ul>
                 </div>
               </li>
-              <li><a href="#">news</a></li>
+              <li><a href="news.html">news</a></li>
               <li><a href="http://armory3d.org/manual">manual</a></li>
               <li><a href="community.html">community</a></li>
               <li><a href="download.html">download</a></li>
@@ -81,7 +81,7 @@
             <a href="#top" uk-scroll="duration: 500" class="uk-offcanvas-close uk-position-left uk-position-relative">Home</a>
           </li>
           <li class="uk-nav-divider"></li>
-          <li><a href="#">news</a></li>
+          <li><a href="news.html">news</a></li>
           <li><a href="http://armory3d.org/manual">manual</a></li>
           <li><a href="community.html">community</a></li>
           <li><a href="download.html">download</a></li>
