forgot viddyozo link

--- a/download.html
+++ b/download.html
@@ -174,7 +174,7 @@
           <img src="img/supporters/ppp_logo.jpg" alt="Pivot Point Press" width="200px">
         </div>
         <div>
-          <a href=""><img src="img/supporters/viddyoze_logo.png" alt="Viddyozo Link Logo" width="350px"></a>
+          <a href="https://viddyozo.com"><img src="img/supporters/viddyoze_logo.png" alt="Viddyozo Link Logo" width="350px"></a>
         </div>
       </div>
     </div>
